--- a/FrontEnd/app/src/main/AndroidManifest.xml
+++ b/FrontEnd/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.ComedoriaTIa"
         tools:targetApi="31">
         <activity
+            android:name=".PedidoActivity"
+            android:exported="false" />
+        <activity
             android:name=".PagamentoActivity"
             android:exported="false" />
         <activity
