--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,14 @@
         android:theme="@style/Theme.Comedoria"
         tools:targetApi="31">
         <activity
+            android:name=".testeSpinner"
+            android:exported="false" >
+        </activity>
+        <activity
             android:name=".Estoque"
             android:exported="false" />
         <activity
             android:name=".perfilAdm"
-
             android:exported="false" />
         <activity
             android:name=".ComprovantePedido"
